[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/MenuScreen.gd" type="Script" id=1]
[ext_resource path="res://Resources/MenuScreen.tres" type="Theme" id=2]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/DefaultFontui.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Utility/debugMode.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.0117647, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1080, 720 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 14.0
margin_right = -240.0
margin_bottom = 344.0
custom_constants/separation = 10

[node name="StartGame" type="Button" parent="VBoxContainer"]
margin_left = 125.0
margin_right = 475.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 70 )
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_left = 125.0
margin_top = 85.0
margin_right = 475.0
margin_bottom = 160.0
rect_min_size = Vector2( 350, 70 )
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_left = 125.0
margin_top = 170.0
margin_right = 475.0
margin_bottom = 245.0
rect_min_size = Vector2( 350, 70 )
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Credits"

[node name="Language" type="Button" parent="VBoxContainer"]
margin_left = 125.0
margin_top = 255.0
margin_right = 475.0
margin_bottom = 330.0
rect_min_size = Vector2( 350, 70 )
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Language: English"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 66.0
margin_right = -240.0
margin_bottom = 131.0
mouse_default_cursor_shape = 2

[node name="PlayAgain" type="Button" parent="VBoxContainer2"]
margin_left = 125.0
margin_right = 475.0
margin_bottom = 70.0
rect_min_size = Vector2( 350, 70 )
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Return to Menu"

[node name="Credits" type="ColorRect" parent="."]
visible = false
margin_left = 100.0
margin_top = 45.0
margin_right = 980.0
margin_bottom = 705.0
color = Color( 0.0901961, 0, 0.113725, 1 )

[node name="Title" type="Label" parent="Credits"]
margin_left = 54.0
margin_top = 40.0
margin_right = 824.0
margin_bottom = 90.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Credits"
align = 1
valign = 1

[node name="Details" type="Label" parent="Credits"]
margin_left = 54.0
margin_top = 98.0
margin_right = 824.0
margin_bottom = 468.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Dev Team
Jacob Laux - Programming, Sound Design, Music, UI, Game Design, Writing
Liza Goncharova - Art Direction and Artist
Winter Keefer - Story, Writing, & Plot
Shelby Pearson - Artist

Assets/Tools/Inspo:
SadÃ© Robinson - Famicase Entry / Inspiration
Josh DeMille, Christian Andrews, & Jake Laux - Background Music
Emi Coppolaemilio - Dialogic
Yui Kinomoto > Glitch Shader"
align = 1
valign = 1

[node name="CloseCredits" type="Button" parent="Credits"]
anchor_left = 0.936
anchor_top = 0.012
anchor_right = 0.946
anchor_bottom = 0.039
margin_right = 15.0
margin_bottom = 20.0
rect_scale = Vector2( 1.9562, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "X"

[node name="Settings" type="ColorRect" parent="."]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 620.0
color = Color( 0.0901961, 0, 0.113725, 1 )

[node name="Title" type="Label" parent="Settings"]
margin_left = 54.0
margin_top = 13.0
margin_right = 824.0
margin_bottom = 63.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="CloseSettings" type="Button" parent="Settings"]
anchor_left = 0.936
anchor_top = 0.012
anchor_right = 0.946
anchor_bottom = 0.039
margin_right = 15.0
margin_bottom = 20.0
rect_scale = Vector2( 1.9562, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_top = -20.0
margin_bottom = 58.0

[node name="MasterLabel" type="Label" parent="Settings/VBoxContainer"]
margin_right = 528.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Master Audio"

[node name="MasterAudio" type="HSlider" parent="Settings/VBoxContainer"]
margin_top = 32.0
margin_right = 528.0
margin_bottom = 48.0
min_value = -30.0
max_value = 0.0

[node name="SFXLabel" type="Label" parent="Settings/VBoxContainer"]
margin_top = 52.0
margin_right = 528.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 3 )
text = "

Sound Effects"

[node name="SoundEffects" type="HSlider" parent="Settings/VBoxContainer"]
margin_top = 146.0
margin_right = 528.0
margin_bottom = 162.0
min_value = -30.0
max_value = 0.0
value = -4.0

[node name="Music" type="Label" parent="Settings/VBoxContainer"]
margin_top = 166.0
margin_right = 528.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 3 )
text = "

Music"

[node name="GameMusic" type="HSlider" parent="Settings/VBoxContainer"]
margin_top = 260.0
margin_right = 528.0
margin_bottom = 276.0
min_value = -30.0
max_value = 0.0
value = -3.0

[node name="StoreRadioLabel" type="Label" parent="Settings/VBoxContainer"]
margin_top = 280.0
margin_right = 528.0
margin_bottom = 370.0
custom_fonts/font = ExtResource( 3 )
text = "

Store Radio / Background Music"

[node name="StoreRadio" type="HSlider" parent="Settings/VBoxContainer"]
margin_top = 374.0
margin_right = 528.0
margin_bottom = 390.0
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="DebugMode" type="Button" parent="."]
margin_left = 718.0
margin_top = 13.0
margin_right = 1068.0
margin_bottom = 88.0
rect_min_size = Vector2( 350, 70 )
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Select Scene DEBUG"

[node name="DebugLinkToScenes" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="VBoxContainer2/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Credits/CloseCredits" to="." method="_on_CloseCredits_pressed"]
[connection signal="pressed" from="Settings/CloseSettings" to="." method="_on_CloseSettings_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/MasterAudio" to="." method="_on_MasterAudio_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/SoundEffects" to="." method="_on_SoundEffects_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/GameMusic" to="." method="_on_GameMusic_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/StoreRadio" to="." method="_on_StoreRadio_value_changed"]
[connection signal="pressed" from="DebugMode" to="." method="_on_Debug_Mode_pressed"]
